backend/compile_output.txt
Listing 'app'...
Listing 'app\\api'...
Compiling 'app\\api\\subscriptions.py'...
***   File "app\api\subscriptions.py", line 49
    from app.models.user import User
    ^^^^
SyntaxError: invalid syntax

Listing 'app\\middleware'...
Listing 'app\\models'...
Listing 'app\\schemas'...
Listing 'app\\services'...
Listing 'app\\utils'...
Listing 'app\\workers'...
